src/test/deca/codegen/interactive/invalid/04stringReadInt.deca
// Description:
//  readInt avec une chaine
//
// Resultats:
//  04stringReadInt.expected
// 
// Historique:
//    cree le 10/06/2022

{
    int x = readInt();
}